--- a/kanban.html
+++ b/kanban.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban - Trello Clone</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome Free CDN (icons) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   </head>
   <body data-page="kanban" class="min-h-screen bg-neutral-50 text-neutral-800">
     <header class="max-w-6xl mx-auto px-4 py-6 flex items-center justify-between">
