--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <nav class="flex gap-3">
         <a href="login.html" class="text-sm px-3 py-2 rounded border border-neutral-300 hover:bg-neutral-100">Login</a>
         <a href="kanban.html" class="text-sm px-3 py-2 rounded border border-neutral-300 hover:bg-neutral-100">Kanban</a>
+        <a href="trash.html" class="text-sm px-3 py-2 rounded border border-neutral-300 hover:bg-neutral-100">Trash</a>
       </nav>
     </header>
     <main class="max-w-5xl mx-auto px-4">
