--- a/kanban.html
+++ b/kanban.html
@@ -13,6 +13,7 @@
       <h1 class="text-xl font-semibold">Kanban Board</h1>
       <div class="flex items-center gap-3">
         <a href="index.html" class="text-sm text-neutral-600 hover:text-neutral-900">Home</a>
+        <a href="trash.html" class="text-sm text-neutral-600 hover:text-neutral-900">Trash</a>
         <button id="logoutBtn" class="text-sm px-3 py-2 rounded border border-neutral-300 hover:bg-neutral-100">Logout</button>
       </div>
     </header>
